--- a/example.html
+++ b/example.html
@@ -12,7 +12,7 @@
 </script>
 
 <meta charset="utf-8">
-<title>example</title>
+<title>index</title>
 </head>
 <body>
 	<a href="http://www.baidu.com">baidu</a>
